@@ -1,4 +1,8 @@
 2005-09-28  Julien Blache <jb@jblache.org>
+	* tools/udev/convert-usermap.sh: Don't print 0x when matching VID
+	and PID.
+
+2005-09-28  Julien Blache <jb@jblache.org>
 	* tools/udev/convert-usermap.sh: Added script to convert
 	hotplug/libsane.usermap to a udev rules file. udev 070 + linux
 	2.6.14 will deprecate hotplug.
